# simple_renderer

./: .gitignore  CMakeLists.txt  vulkan_renderer_project_spec_zh.md
shaders/: basic.frag  basic.vert
src/: main.cpp
src/app/: Application.cpp  Application.h  InputState.h  Timer.h
src/core/: Assert.h  FileIO.h  Log.h
src/math/: Math.h
src/render/: RenderScene.cpp  RenderScene.h  Renderer.cpp  Renderer.h
src/scene/: Camera.h  GltfLoader.cpp  GltfLoader.h  Material.h  Mesh.h  Node.h  Scene.cpp  Scene.h  Transform.h
src/vulkan/: FrameContext.h  Swapchain.cpp  Swapchain.h  VulkanContext.cpp  VulkanContext.h
